--- a/public/platform/native/BUILD.gn
+++ b/public/platform/native/BUILD.gn
@@ -2,21 +2,19 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-import("//build/config/mojo.gni")
-
 source_set("system_thunks") {
   visibility = [
-    rebase_path("mojo/public/c/system:for_component", ".", mojo_root),
-    rebase_path("mojo/public/c/system:for_shared_library", ".", mojo_root),
+    "../../c/system:for_component",
+    "../../c/system:for_shared_library",
   ]
 
-  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
+  public_configs = [ "../../../build/config:mojo_sdk" ]
   sources = [
     "system_thunks.h",
     "system_thunks.cc",
   ]
   defines = [ "MOJO_SYSTEM_IMPLEMENTATION" ]
-  deps = [ rebase_path("mojo/public/c/system", ".", mojo_root) ]
+  deps = [ "../../c/system" ]
 
   # The GYP target analogous to this one builds this code into a
   # static library.  When building for Android, both the GYP and GN
@@ -30,9 +28,9 @@ source_set("system_thunks") {
 
 # GYP version: mojo/mojo_public_gles2_for_loadable_module.gypi
 source_set("gles2_thunks") {
-  visibility = [ rebase_path("mojo/public/gles2:for_shared_library", ".", mojo_root) ]
+  visibility = [ "../../gles2:for_shared_library" ]
 
-  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
+  public_configs = [ "../../../build/config:mojo_sdk" ]
   sources = [
     "gles2_thunks.cc",
     "gles2_thunks.h",
@@ -48,12 +46,12 @@ source_set("gles2_thunks") {
     "MOJO_GLES2_IMPLEMENTATION",
   ]
 
-  configs += [ rebase_path("third_party/khronos:khronos_headers", ".", mojo_third_party_root) ]
+  configs += [ "//third_party/khronos:khronos_headers" ]
 
   deps = [
-    rebase_path("mojo/public/c/gles2", ".", mojo_root),
-    rebase_path("mojo/public/c/environment", ".", mojo_root),
-    rebase_path("mojo/public/c/system", ".", mojo_root),
+    "../../c/gles2",
+    "../../c/environment",
+    "../../c/system",
   ]
 
   if (is_mac) {
