--- a/public/c/environment/BUILD.gn
+++ b/public/c/environment/BUILD.gn
@@ -2,14 +2,12 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-import("//build/config/mojo.gni")
-
 source_set("environment") {
-  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
+  public_configs = [ "../../../build/config:mojo_sdk" ]
   sources = [
     "async_waiter.h",
     "logger.h",
   ]
 
-  deps = [ rebase_path("mojo/public/c/system", ".", mojo_root) ]
+  deps = [ "../system" ]
 }
