--- a/public/c/system/BUILD.gn
+++ b/public/c/system/BUILD.gn
@@ -2,14 +2,12 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-import("//build/config/mojo.gni")
-
 # Depend on this target to use the types etc defined in the system without
 # linking against a specific implementation of the system. To link against a
 # particular implementation, use the :for_component or
 # :for_shared_library targets, depending on the type of target you are.
 source_set("system") {
-  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
+  public_configs = [ "../../../build/config:mojo_sdk" ]
   sources = [
     "buffer.h",
     "core.h",
@@ -28,18 +26,18 @@ source_set("system") {
 # injected into other shared libraries (i.e., Mojo Apps) that need the mojo
 # system API.
 #
-# For component targets, add //mojo/public/c/system:for_component to your deps
+# For component targets, add c/system:for_component to your deps
 # section.
 #
 # For shared_library targets (e.g., a Mojo App), add
-# //mojo/public/c/system:for_shared_library to your deps
+# c/system:for_shared_library to your deps
 
 group("for_shared_library") {
   public_deps = [ ":system" ]
   if (is_component_build) {
     deps = [ "//mojo/edk/system" ]
   } else {
-    deps = [ rebase_path("mojo/public/platform/native:system_thunks", ".", mojo_root) ]
+    deps = [ "../../platform/native:system_thunks" ]
   }
 }
 
