--- a/public/c/test_support/BUILD.gn
+++ b/public/c/test_support/BUILD.gn
@@ -2,15 +2,13 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-import("//build/config/mojo.gni")
-
 # GYP version: mojo/public/mojo_public.gyp:mojo_test_support
 shared_library("test_support") {
   output_name = "mojo_test_support"
 
   defines = [ "MOJO_TEST_SUPPORT_IMPLEMENTATION" ]
 
-  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
+  public_configs = [ "../../../build/config:mojo_sdk" ]
   sources = [
     "test_support.h",
     "test_support_export.h",
