--- a/public/cpp/bindings/tests/BUILD.gn
+++ b/public/cpp/bindings/tests/BUILD.gn
@@ -2,11 +2,9 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-import("//build/config/mojo.gni")
-
 # GYP version: mojo/mojo_base.gyp:mojo_public_bindings_unittests
 test("mojo_public_bindings_unittests") {
-  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
+  public_configs = [ "../../../../build/config:mojo_sdk" ]
   sources = [
     "array_unittest.cc",
     "bounds_checker_unittest.cc",
@@ -28,26 +26,26 @@ test("mojo_public_bindings_unittests") {
   ]
 
   deps = [
+    "../../bindings",
+    "../../environment:standalone",
+    "../../system",
+    "../../test_support:test_utils",
+    "../../utility",
+    "../../../interfaces/bindings/tests:test_interfaces",
     "//mojo/edk/test:run_all_unittests",
-    rebase_path("mojo/public/cpp/bindings", ".", mojo_root),
-    rebase_path("mojo/public/cpp/environment:standalone", ".", mojo_root),
-    rebase_path("mojo/public/cpp/system", ".", mojo_root),
-    rebase_path("mojo/public/cpp/test_support:test_utils", ".", mojo_root),
-    rebase_path("mojo/public/cpp/utility", ".", mojo_root),
-    rebase_path("mojo/public/interfaces/bindings/tests:test_interfaces", ".", mojo_root),
-    rebase_path("testing/gtest", ".", mojo_third_party_root),
+    "//testing/gtest",
     ":mojo_public_bindings_test_utils",
   ]
 }
 
 source_set("mojo_public_bindings_test_utils") {
-  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
+  public_configs = [ "../../../../build/config:mojo_sdk" ]
   sources = [
     "validation_test_input_parser.cc",
     "validation_test_input_parser.h",
   ]
 
   deps = [
-    rebase_path("mojo/public/c/system", ".", mojo_root),
+    "../../../c/system",
   ]
 }
