--- a/public/cpp/utility/BUILD.gn
+++ b/public/cpp/utility/BUILD.gn
@@ -2,10 +2,8 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-import("//build/config/mojo.gni")
-
 source_set("utility") {
-  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
+  public_configs = [ "../../../build/config:mojo_sdk" ]
   sources = [
     "mutex.h",
     "run_loop.h",
@@ -20,8 +18,8 @@ source_set("utility") {
   ]
 
   deps = [
-    rebase_path("mojo/public/cpp/bindings:callback", ".", mojo_root),
-    rebase_path("mojo/public/cpp/system", ".", mojo_root),
+    "../bindings:callback",
+    "../system",
   ]
 
   if (is_win) {
