--- a/public/dart/BUILD.gn
+++ b/public/dart/BUILD.gn
@@ -2,8 +2,6 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-import("//build/config/mojo.gni")
-
 group("dart") {
   testonly = true
   deps = [
@@ -23,23 +21,23 @@ group("core") {
 
 shared_library("mojo_dart_core") {
   defines = ["DART_SHARED_LIB"]
-  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
+  public_configs = [ "mojo/build/config:mojo_sdk" ]
   sources = [
     "src/mojo_dart_core.cc",
   ]
   deps = [
-    rebase_path("mojo/public/c/environment", ".", mojo_root),
-    rebase_path("mojo/public/c/system:for_shared_library", ".", mojo_root),
-    rebase_path("mojo/public/cpp/environment:standalone", ".", mojo_root),
-    rebase_path("mojo/public/cpp/system", ".", mojo_root),
-    rebase_path("mojo/public/cpp/utility", ".", mojo_root),
-    rebase_path("mojo/public/cpp/bindings:callback", ".", mojo_root),
+    "../c/environment",
+    "../c/system:for_shared_library",
+    "../cpp/environment:standalone",
+    "../cpp/system",
+    "../cpp/utility",
+    "../cpp/bindings:callback",
   ]
 }
 
 
 copy("copy_core_library") {
-  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
+  public_configs = [ "mojo/build/config:mojo_sdk" ]
   sources = [
     "$root_out_dir/libmojo_dart_core.so",
   ]
@@ -53,7 +51,7 @@ copy("copy_core_library") {
 
 
 copy("bindings") {
-  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
+  public_configs = [ "mojo/build/config:mojo_sdk" ]
   sources = [
     "bindings.dart",
     "core.dart",
