--- a/public/gles2/BUILD.gn
+++ b/public/gles2/BUILD.gn
@@ -2,8 +2,6 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-import("//build/config/mojo.gni")
-
 # In an is_component_build build, everything can link against //mojo/gles2
 # because it is built as a shared library. However, in a static build,
 # //mojo/gles2 is linked into an executable (e.g., mojo_shell), and must be
@@ -17,19 +15,19 @@ import("//build/config/mojo.gni")
 # //mojo/public/gles2:for_shared_library to your deps
 
 group("for_shared_library") {
-  public_configs = [ rebase_path("third_party/khronos:khronos_headers", ".", mojo_third_party_root) ]
-  public_deps = [ rebase_path("mojo/public/c/gles2", ".", mojo_root) ]
+  public_configs = [ "//third_party/khronos:khronos_headers" ]
+  public_deps = [ "../c/gles2" ]
 
   if (is_component_build) {
     deps = [ "//mojo/gles2" ]
   } else {
-    deps = [ rebase_path("mojo/public/platform/native:gles2_thunks", ".", mojo_root) ]
+    deps = [ "../platform/native:gles2_thunks" ]
   }
 }
 
 group("for_component") {
-  public_configs = [ rebase_path("third_party/khronos:khronos_headers", ".", mojo_third_party_root) ]
-  public_deps = [ rebase_path("mojo/public/c/gles2", ".", mojo_root) ]
+  public_configs = [ "//third_party/khronos:khronos_headers" ]
+  public_deps = [ "../c/gles2" ]
 
   if (is_component_build) {
     deps = [ "//mojo/gles2" ]
