--- a/public/interfaces/application/BUILD.gn
+++ b/public/interfaces/application/BUILD.gn
@@ -2,13 +2,11 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-import("//build/config/mojo.gni")
-
-import(rebase_path("mojo/public/tools/bindings/mojom.gni", ".", mojo_root))
+import("../../tools/bindings/mojom.gni")
 
 # GYP version: mojo/public/mojo_public.gyp:mojo_application_bindings
 mojom("application") {
-
+  public_configs = [ "../../../build/config:mojo_sdk" ]
   sources = [
     "application.mojom",
     "service_provider.mojom",
