--- a/public/interfaces/bindings/tests/BUILD.gn
+++ b/public/interfaces/bindings/tests/BUILD.gn
@@ -2,13 +2,11 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-import("//build/config/mojo.gni")
-
-import(rebase_path("mojo/public/tools/bindings/mojom.gni", ".", mojo_root))
+import("../../../tools/bindings/mojom.gni")
 
 mojom("test_interfaces") {
   testonly = true
-
+  public_configs = [ "../../../../build/config:mojo_sdk" ]
   sources = [
     "math_calculator.mojom",
     "no_module.mojom",
