--- a/public/js/BUILD.gn
+++ b/public/js/BUILD.gn
@@ -2,10 +2,8 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-import("//build/config/mojo.gni")
-
 source_set("js") {
-  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
+  public_configs = [ "../../build/config:mojo_sdk" ]
   sources = [
     "constants.cc",
     "constants.h",
