--- a/public/mojo_application.gni
+++ b/public/mojo_application.gni
@@ -2,9 +2,7 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-import("//build/config/mojo.gni")
-
-import(rebase_path("mojo/public/mojo.gni", ".", mojo_root))
+import("//mojo/public/mojo.gni")
 
 # Generate a binary mojo application.The parameters of this template are those
 # of a shared library.
@@ -64,11 +62,11 @@ template("mojo_native_application") {
     if (defined(invoker.datadeps)) {
       datadeps = invoker.datadeps
       if (use_prebuilt_mojo_shell) {
-        datadeps += [ rebase_path("mojo/public/tools:copy_mojo_shell", ".", mojo_root) ]
+        datadeps += [ "//mojo/public/tools:copy_mojo_shell" ]
       }
     } else {
       if (use_prebuilt_mojo_shell) {
-        datadeps = [ rebase_path("mojo/public/tools:copy_mojo_shell", ".", mojo_root) ]
+        datadeps = [ "//mojo/public/tools:copy_mojo_shell" ]
       }
     }
     if (defined(invoker.deps)) {
