--- a/public/python/BUILD.gn
+++ b/public/python/BUILD.gn
@@ -2,9 +2,7 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-import("//build/config/mojo.gni")
-
-import(rebase_path("third_party/cython/rules.gni", ".", mojo_third_party_root))
+import("//third_party/cython/rules.gni")
 
 group("python") {
   deps = [
@@ -17,7 +15,6 @@ group("python") {
 # GYP version: mojo.gyp:mojo_python_system
 python_binary_module("system") {
   python_base_module = "mojo"
-
   sources = [
     "mojo/c_core.pxd",
     "mojo/c_environment.pxd",
@@ -28,18 +25,17 @@ python_binary_module("system") {
     "src/python_system_helper.h",
   ]
   deps = [
-    rebase_path("mojo/public/c/environment", ".", mojo_root),
-    rebase_path("mojo/public/c/system:for_shared_library", ".", mojo_root),
-    rebase_path("mojo/public/cpp/environment:standalone", ".", mojo_root),
-    rebase_path("mojo/public/cpp/system", ".", mojo_root),
-    rebase_path("mojo/public/cpp/utility", ".", mojo_root),
-    rebase_path("mojo/public/cpp/bindings:callback", ".", mojo_root),
+    "../c/environment",
+    "../c/system:for_shared_library",
+    "../cpp/environment:standalone",
+    "../cpp/system",
+    "../cpp/utility",
+    "../cpp/bindings:callback",
     ":base",
   ]
 }
 
 copy("base") {
-
   sources = [
     "mojo/__init__.py",
   ]
@@ -50,7 +46,6 @@ copy("base") {
 
 # GYP version: mojo.gyp:mojo_python_bindings
 copy("bindings") {
-
   sources = [
     "mojo/bindings/__init__.py",
     "mojo/bindings/descriptor.py",
