--- a/public/sky/BUILD.gn
+++ b/public/sky/BUILD.gn
@@ -2,19 +2,17 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-import("//build/config/mojo.gni")
-
 action_foreach("sky") {
   script = "convert_amd_modules_to_sky.py"
-  public_configs = [ rebase_path("mojo/build/config", ".", mojo_root) + ":mojo_sdk" ]
+  public_configs = [ "../../build/config:mojo_sdk" ]
   sources = [
-    rebase_path("mojo/public/js/buffer.js", ".", mojo_root),
-    rebase_path("mojo/public/js/codec.js", ".", mojo_root),
-    rebase_path("mojo/public/js/connection.js", ".", mojo_root),
-    rebase_path("mojo/public/js/connector.js", ".", mojo_root),
-    rebase_path("mojo/public/js/router.js", ".", mojo_root),
-    rebase_path("mojo/public/js/unicode.js", ".", mojo_root),
-    rebase_path("mojo/public/js/validator.js", ".", mojo_root),
+    "../js/buffer.js",
+    "../js/codec.js",
+    "../js/connection.js",
+    "../js/connector.js",
+    "../js/router.js",
+    "../js/unicode.js",
+    "../js/validator.js",
   ]
   outputs = [
     "$target_gen_dir/{{source_name_part}}.sky",
