--- a/public/mojo_application.gni
+++ b/public/mojo_application.gni
@@ -2,7 +2,7 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-import("//mojo/public/mojo.gni")
+import("mojo.gni")
 
 # Generate a binary mojo application.The parameters of this template are those
 # of a shared library.
