Update mojo sdk to rev 504bae721b981f781c5a0b9c8c150e7f246fb88b

--- a/public/tools/bindings/mojom.gni
+++ b/public/tools/bindings/mojom.gni
@@ -31,7 +31,7 @@ template("mojom") {
          "\"sources\" must be defined for the $target_name template.")
 
   generator_root =
-      rebase_path("mojo/public/tools/binding/mojom.gni", ".", mojo_root)
+      rebase_path("mojo/public/tools/bindings", ".", mojo_root)
   generator_script = "$generator_root/mojom_bindings_generator.py"
   generator_sources = [
     generator_script,
