Update mojo sdk to rev 504bae721b981f781c5a0b9c8c150e7f246fb88b

--- a/public/tools/bindings/mojom.gni
+++ b/public/tools/bindings/mojom.gni
@@ -133,6 +133,12 @@ template("mojom") {
     ]
   }
 
+  if (defined(mojom_import_dirs)) {
+    foreach(d, mojom_import_dirs) {
+      args += ["-I", rebase_path(d, root_build_dir)]
+    }
+  }
+
   source_set(target_name) {
     if (defined(invoker.visibility)) {
       visibility = invoker.visibility
