Update mojo sdk to rev 504bae721b981f781c5a0b9c8c150e7f246fb88b

--- a/public/tools/bindings/mojom.gni
+++ b/public/tools/bindings/mojom.gni
@@ -152,17 +152,15 @@ template("mojom") {
       ":$generator_target_name",
     ]
 
-    relative_deps = rebase_path([
+    public_deps = rebase_path([
       "mojo/public/cpp/bindings",
     ], ".", mojo_root)
-
-    deps += relative_deps
 
     if (defined(invoker.deps)) {
       deps += invoker.deps
     }
     if (defined(invoker.public_deps)) {
-      public_deps = invoker.public_deps
+      public_deps += invoker.public_deps
     }
     if (defined(invoker.configs)) {
       configs += invoker.configs
