--- a/public/mojo_application.gni
+++ b/public/mojo_application.gni
@@ -2,6 +2,7 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+import("//build/config/mojo.gni")
 import("mojo.gni")
 
 # Generate a binary mojo application.The parameters of this template are those
@@ -59,14 +60,18 @@ template("mojo_native_application") {
       libs = invoker.libs
     }
     # Copy the prebuilt mojo_shell if using it.
+    if (use_prebuilt_mojo_shell) {
+      copy_mojo_shell =
+          rebase_path("mojo/public/tools", ".", mojo_root) + ":copy_mojo_shell"
+    }
     if (defined(invoker.datadeps)) {
       datadeps = invoker.datadeps
       if (use_prebuilt_mojo_shell) {
-        datadeps += [ "//mojo/public/tools:copy_mojo_shell" ]
+        datadeps += [ copy_mojo_shell ]
       }
     } else {
       if (use_prebuilt_mojo_shell) {
-        datadeps = [ "//mojo/public/tools:copy_mojo_shell" ]
+        datadeps = [ copy_mojo_shell ]
       }
     }
     if (defined(invoker.deps)) {
