--- a/public/cpp/application/tests/BUILD.gn
+++ b/public/cpp/application/tests/BUILD.gn
@@ -8,11 +8,12 @@ test("mojo_public_application_unittests") {
     "../../application:standalone",
     "../../environment:standalone",
     "../../utility",
+    "../../../../edk/test:run_all_unittests",
     "//base",
-    "//mojo/edk/test:run_all_unittests",
     "//testing/gtest",
   ]
 
   public_configs = [ "../../../../build/config:mojo_sdk" ]
+
   sources = [ "service_registry_unittest.cc" ]
 }
