--- a/public/cpp/application/tests/BUILD.gn
+++ b/public/cpp/application/tests/BUILD.gn
@@ -13,7 +13,7 @@ test("mojo_public_application_unittests") {
     "//testing/gtest",
   ]
 
-  public_configs = [ "../../../../build/config:mojo_sdk" ]
+  configs += [ "../../../../build/config:mojo_sdk" ]
 
   sources = [ "service_registry_unittest.cc" ]
 }
