--- a/public/cpp/system/tests/BUILD.gn
+++ b/public/cpp/system/tests/BUILD.gn
@@ -12,7 +12,7 @@ test("mojo_public_system_unittests") {
     "//testing/gtest",
   ]
 
-  public_configs = [ "../../../../build/config:mojo_sdk" ]
+  configs += [ "../../../../build/config:mojo_sdk" ]
 
   sources = [
     "core_unittest.cc",
